Доработаны отчёты на Cat. Нужно сделать аналогию на Dog.